basic chat room created successfully

--- a/chat_room/templates/chat_room/chatrooms.html
+++ b/chat_room/templates/chat_room/chatrooms.html
@@ -13,7 +13,7 @@
             <div class="p-4 bg-white shadow rounded-xl text-center">
                 <h2 class="mb-5 text-2xl font-semibold">{{ chatroom.name }}</h2>
 
-                <a href="{% url 'chatroom' chatroom.slug %}" class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Join</a>
+                <a href="{% url 'chatroom' chatroom.slug %}" class="px-5 py-3 block rounded-xl text-white bg-rose-900 hover:bg-rose-700">Join</a>
             </div>
         </div>
     {% endfor %}
