--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>{% block title %}{% endblock %}Chat App</title>
+    <title>
+      {% block title %}
 
-        <script src="https://cdn.tailwindcss.com"></script>
+      {% endblock %}Chat App
+    </title>
 
-        <style>
-            .messages {
-                height: 400px;
-                overflow-y: auto;
-            }
-        </style>
-    </head>
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <body class="bg-teal-600">
-        <nav class="flex items-center justify-between px-4 py-6 bg-teal-800">
-            <div>
-                <a href="/" class="text-xl text-white">Chat App</a>
-            </div>
-            
-            <div class="flex items-center space-x-4">
-                {% if request.user.is_authenticated %}
-                    <a href="/chatrooms/" class="text-white hover:text-gray-200">Chat Rooms</a>
-                    <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit">Logout</button>
-                    </form>
-                {% else %}
-                    <a href="/login/" class="text-white hover:text-gray-200">Log in</a>
-            
-                    <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Sign up</a>
-                {% endif %}
-            </div>
-        </nav>
+    <style>
+      .messages {
+        height: 400px;
+        overflow-y: auto;
+      }
+    </style>
+  </head>
 
-        {% block content %}
-        {% endblock %}
+  <body class="bg-gradient-to-r from-rose-950 to-slate-950">
+    <nav class="flex items-center justify-between px-4 py-6">
+      <div>
+        <a href="/" class="text-xl text-white">Chat App</a>
+      </div>
 
-        {% block scripts %}
-        {% endblock %}
-    </body>
+      <div class="flex items-center space-x-4">
+        {% if request.user.is_authenticated %}
+          <a href="/chatrooms/" class="text-white hover:text-rose-900">Chat Rooms</a>
+          <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="text-white hover:text-rose-900">Logout</button>
+          </form>
+        {% else %}
+          <a href="/login/" class="text-white hover:text-rose-900">Log in</a>
+
+          <a href="/signup/" class="px-5 py-2 rounded-xl text-white bg-rose-950 hover:bg-rose-900">Sign up</a>
+        {% endif %}
+      </div>
+    </nav>
+
+    {% block content %}
+
+    {% endblock %}
+
+    {% block scripts %}
+
+    {% endblock %}
+  </body>
 </html>
