--- a/chat_room/templates/chat_room/chatroom.html
+++ b/chat_room/templates/chat_room/chatroom.html
@@ -36,6 +36,9 @@
                           <div class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">{{ m.user.username|first }}</div>
                           <div class="relative mr-3 text-sm bg-indigo-100 py-2 px-4 shadow rounded-xl">
                             <div>{{ m.content }}</div>
+                            <p class="text-right text-xs text-grey-dark mt-1">
+                              {{ m.date_added | time }}
+                          </p>
                           </div>
                         </div>
                       </div>
@@ -45,6 +48,9 @@
                           <div class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">{{ m.user.username|first }}</div>
                           <div class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl">
                             <div>{{ m.content }}</div>
+                            <p class="text-right text-xs text-grey-dark mt-1">
+                              {{ m.date_added | time }}
+                          </p>
                           </div>
                         </div>
                       </div>
@@ -180,7 +186,3 @@
 
   </body>
 </html>
-
-
-
-
