--- a/chat_room/templates/chat_room/chatrooms.html
+++ b/chat_room/templates/chat_room/chatrooms.html
@@ -1,21 +1,22 @@
-{% extends 'base/base.html' %}
-
-{% block title %}Chat rooms | {% endblock %}
-
+{% extends 'base/base.html' %} {% block title %}Chat rooms | {% endblock %} 
 {% block content %}
 <div class="p-10 lg:p-20 text-center">
-    <h1 class="text-3xl lg:text-6xl text-white">Chat rooms</h1>
+  <h1 class="text-3xl lg:text-6xl text-white">Chat rooms</h1>
 </div>
 
 <div class="w-full flex flex-wrap items-center">
-    {% for chatroom in chatrooms %}
-        <div class="w-full lg:w-1/4 px-3 py-3">
-            <div class="p-4 bg-white shadow rounded-xl text-center">
-                <h2 class="mb-5 text-2xl font-semibold">{{ chatroom.name }}</h2>
+  {% for chatroom in chatrooms %}
+  <div class="w-full lg:w-1/4 px-3 py-3">
+    <div class="p-4 bg-white shadow rounded-xl text-center">
+      <h2 class="mb-5 text-2xl font-semibold">{{ chatroom.name }}</h2>
 
-                <a href="{% url 'chatroom' chatroom.slug %}" class="px-5 py-3 block rounded-xl text-white bg-rose-900 hover:bg-rose-700">Join</a>
-            </div>
-        </div>
-    {% endfor %}
+      <a
+        href="{% url 'chatroom' chatroom.slug %}"
+        class="px-5 py-3 block rounded-xl text-white bg-rose-900 hover:bg-rose-700"
+        >Join</a
+      >
+    </div>
+  </div>
+  {% endfor %}
 </div>
 {% endblock %}
